modal bug on mobile fixed

--- a/src/ui/Modal/Modal.module.scss
+++ b/src/ui/Modal/Modal.module.scss
@@ -2,8 +2,8 @@
 
 .main {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 10;
   display: flex;
   align-items: center;
